--- a/reddit/app/views/users/new.html.erb
+++ b/reddit/app/views/users/new.html.erb
@@ -1,9 +1,18 @@
 <form action="<%= users_url %>" method="POST">
+<h1>Sign Up</h1>
+
+<br>
     <label>Username:
         <input id="username" name="user[username]" value="">
     </label>
+
+    <br>
+
     <label>Password:
-        <input id="password" name="user[password]" value="">
+        <input id="password" name="user[password]" value="" type="password">
     </label>
-    <input type="submit" value="Create User">
+
+    <br>
+
+    <input type="submit" value="Sign Up">
 </form>
