User routing done

--- a/reddit/app/views/users/edit.html.erb
+++ b/reddit/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <form action="<%= user_url(@user) %>" method="POST">
-<input type="hidden" name="_method" method="PATCH">
+<input type="hidden" name="_method" value="PATCH">
 
 <h1>Edit User</h1>
 
