--- a/reddit/app/views/layouts/application.html.erb
+++ b/reddit/app/views/layouts/application.html.erb
@@ -8,8 +8,19 @@
 
     <%= stylesheet_link_tag "application" %>
   </head>
-
   <body>
+    <a href="<%= subs_url %>"> Reddit </a>
+    <% if logged_in? %>
+      <h4> Logged in as: <%= current_user.username %> </h4>
+      <form action="<%= session_url %>" method="POST">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="Logout">
+      </form>
+    <% else %>
+      <a href="<%= new_session_url %>"> Login </a>
+      <br>
+      <a href="<%= new_user_url %>"> Sign Up </a>
+    <% end %>
     <%= yield %>
   </body>
 </html>
